# rok-orm

./: .gitignore  Cargo.toml  DEV_PLAN.md  IMPROVEMENTS_PLAN.md  LICENSE-MIT  PLAN.md  README.md  USER_MANUAL.md
.github/workflows/: ci.yml
examples/: README.md
examples/14a-core/: .env.example  Cargo.toml  README.md  docker-compose.yml  schema.sql
examples/14a-core/src/: aggregations.rs  basic_model.rs  crud.rs  crud_operations.rs  logging.rs  main.rs  pagination.rs  query_logging.rs  query_scopes.rs  relationships.rs  scopes.rs  soft_delete.rs  soft_deletes.rs  timestamps.rs  transactions.rs
examples/14b-relationships/: .env.example  Cargo.toml  README.md  docker-compose.yml  schema.sql
examples/14b-relationships/src/: cursor_pagination.rs  event_muting.rs  first_or_create.rs  global_scopes.rs  main.rs  many_to_many.rs  model_observers.rs  raw_expressions.rs  when_conditional.rs  where_has.rs  with_count.rs  without_timestamps.rs
examples/14c-advanced/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  schema.sql
examples/14c-advanced/src/: full_text_search.rs  json_columns.rs  main.rs  schema_builder.rs  subqueries.rs  window_functions.rs
issues/: README.md  bug-001-missing-pgmodel-trait-imports.md  bug-002-wrong-relations-derive-syntax.md  bug-003-querybuilder-missing-fluent-executor-methods.md  bug-004-find-by-pk-returns-option-not-t.md  bug-005-upsert-wrong-argument-signature.md  bug-006-pagination-wrong-api-usage.md  bug-007-eager-loading-with-posts-field-missing.md  bug-008-transactions-unescaped-format-braces.md  bug-009-query-scope-chaining-on-wrong-type.md  bug-010-aggregate-methods-wrong-arg-order-and-return-type.md  bug-011-soft-delete-wrong-static-method-names.md  bug-012-format-string-in-sqlvalue-context.md
plan/: README.md  orm-cli.md  phase_01-foundation-and-core.md  phase_07-rich-relationships.md  phase_08-developer-ergonomics.md  phase_09-schema-and-migrations.md  phase_10-advanced-query.md  phase_11-casting-and-serialization.md  phase_12-testing-infrastructure.md  phase_13-ecosystem.md  phase_14-examples.md
proc-macro/: Cargo.toml
proc-macro/src/: expand_model.rs  expand_model_cast.rs  expand_model_serial.rs  expand_relations.rs  expand_relations_morph.rs  lib.rs  query_macro.rs
rok-orm/: Cargo.toml
rok-orm-core/: Cargo.toml
rok-orm-core/src/: condition.rs  lib.rs  model.rs  query.rs  sqlx_pg.rs  sqlx_sqlite.rs
rok-orm-macros/: Cargo.toml
rok-orm-macros/src/: lib.rs
rok-orm-test/: Cargo.toml
rok-orm-test-macros/: Cargo.toml
rok-orm-test-macros/src/: lib.rs
rok-orm-test/src/: assert_db.rs  factory.rs  lib.rs  test_db.rs
rok-orm/src/: belongs_to_many.rs  eager.rs  errors.rs  executor.rs  hooks.rs  lib.rs  logging.rs  my_model.rs  mysql_executor.rs  pagination.rs  pg_model.rs  relations.rs  scopes.rs  sqlite_executor.rs  sqlite_model.rs  transaction.rs
rok-orm/tests/: integration.rs  pg_integration.rs
src/: casting.rs  connection.rs  cursor.rs  errors.rs  extras.rs  global_scope.rs  hooks.rs  lib.rs  logging.rs  observer.rs  pagination.rs  scopes.rs  serialization.rs  transaction.rs
src/executor/: mod.rs  mysql.rs  postgres.rs  postgres_advanced.rs  sqlite.rs  sqlx_pg.rs  sqlx_sqlite.rs
src/migration/: mod.rs  tests.rs
src/model/: mod.rs  model.rs  model_tests.rs  mysql_model.rs  mysql_model_ext.rs  pg_model.rs  pg_model_ext.rs  prunable.rs  sqlite_model.rs  sqlite_model_ext.rs
src/query/: aggregates.rs  builder.rs  condition.rs  conditions.rs  cte.rs  ergonomics.rs  executor_glue.rs  fts.rs  json.rs  mod.rs  query.rs  sql_gen.rs  sql_write.rs  subquery.rs  tests.rs  tests_advanced.rs  tests_phase10.rs  window.rs  with_agg.rs
src/relations/: belongs_to.rs  belongs_to_many.rs  eager.rs  has_many.rs  has_many_tests.rs  has_many_through.rs  has_one.rs  has_one_through.rs  lazy.rs  many_to_many.rs  mod.rs  morph.rs  morph_map.rs  pivot_row.rs  registry.rs  relations.rs  traits.rs
src/schema/: blueprint.rs  column.rs  generator.rs  inspector.rs  mod.rs  tests.rs
tests/: integration.rs
