[package]
name = "rok-orm"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["rok-orm contributors"]
repository = "https://github.com/rok-rs/rok-orm"
homepage = "https://github.com/rok-rs/rok-orm"
description = "Eloquent-inspired async ORM for Rust"
keywords = ["orm", "database", "async", "rust", "eloquent"]
categories = ["database"]

[lib]
name = "rok_orm"
crate-type = ["lib"]

[dependencies]
rok-orm-macros = { path = "proc-macro" }
sqlx = { version = "0.8", default-features = false, features = ["macros", "chrono"], optional = true }
futures-core = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"], optional = true }
ulid = { version = "1", optional = true }
cfg-if = "1.0"
heck = "0.5"

[dev-dependencies]

[features]
default = []
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio-native-tls", "dep:futures-core"]
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]
mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/runtime-tokio-native-tls", "sqlx/macros"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
uuid-pk = ["dep:uuid"]
ulid-pk = ["dep:ulid"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 0
