[package]
name = "rok-orm-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for rok-orm: #[derive(Model)], query!(), relationships"
keywords = ["orm", "macro", "derive", "rok"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
