[package]
name = "rok-orm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["orm", "database", "async", "rok", "eloquent"]
categories = ["database"]

[features]
default = []
postgres = ["dep:sqlx", "dep:tokio", "rok-orm-core/sqlx-postgres"]
sqlite = ["dep:sqlx", "dep:tokio", "rok-orm-core/sqlx-sqlite"]

[dependencies]
rok-orm-core = { path = "../rok-orm-core", version = "0.2.0" }
rok-orm-macros = { path = "../rok-orm-macros", version = "0.2.0" }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio.workspace = true
